2009-03-18 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-header-tests.md: New file with cli header tests.

	* Makefile: Add new tests.
	
2009-03-16 Rodrigo Kumpera  <rkumpera@novell.com>

	* resources-tests.md: New file with pecoff tests.

	* Makefile: Add new tests.

	* header-tests.md: Update some tests.

2009-03-13 Rodrigo Kumpera  <rkumpera@novell.com>

	* data-directory-tests.md: New tests for IAT directory entry.

2009-03-13 Rodrigo Kumpera  <rkumpera@novell.com>

	* data-directory-tests.md: New tests for import table name, ilt and iat.

2009-03-13 Rodrigo Kumpera  <rkumpera@novell.com>

	* data-directory-tests.md: New tests for import table.

	* gen-md-tests.c: Added translate.rva and translate.rva.ind functions.

2009-03-12 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c (parse_test_entry): Fix multi effect rules.

	* Makefile: Add rules for data-directory-tests.md.
	
	* data-directory-tests.md: New tests for data directories.

2009-03-12 Rodrigo Kumpera  <rkumpera@novell.com>

	* section-table-tests.md: Test for flags.

2009-02-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* section-table-tests.md: New test suite for
	section headers.

	* Makefile: Add new test suite.

2009-02-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Add section-table var.
	Add support for function calls. Added read.uint.
	Added support for complex arithmetic expressions.

2009-01-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* header-tests.md: Add more tests for pe optional header.

2009-01-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Add pe-optional-heaver var.
	Improve debugging messages. 

2009-01-14 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Improve debugging.

	* header-tests.md: Add tests for the optional header.

2009-01-14 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Revert decision of making base 16 the default.
	It makes for shorter tests, but it's confusing.
